Fix checkbox icon alignment issue

--- a/resources/assets/admin/styles/_el_customize.scss
+++ b/resources/assets/admin/styles/_el_customize.scss
@@ -695,3 +695,13 @@
         align-items: center;
     }
 }
+
+.el-checkbox-horizontal {
+    .el-checkbox{
+        display: flex;
+        &__input{
+            padding-top: 3px;
+            align-self: flex-start;
+        }
+    }
+}
